# src/routes/index.js
@@ -1,7 +1,14 @@
 const router = require('express').Router();
 const { controllers: articleController } = require('../api/v1/article');
 const { controllers: articleControllerV2 } = require('../api/v2/article');
+const { controllers: authController } = require('../api/v1/auth');
 
+// Auth routes
+router
+  .post('/api/v1/auth/register', authController.register)
+  .post('/api/v1/auth/login', authController.login);
+
+// Article routes
 router
   .route('/api/v1/articles')
   .get(articleController.findAllItems)
